dev: handle state, template method design pattern for order

--- a/PlanGuruAPI/appsettings.json
+++ b/PlanGuruAPI/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Mail": {
+    "Gmail": {
+      "Username": "<<USER_GMAIL>>",
+      "Password":  "<<USER_PASSWORD>>"
+    }
+  },
   "AllowedHosts": "*"
 }
