--- a/PlanGuruAPI/appsettings.Development.json
+++ b/PlanGuruAPI/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Mail": {
+    "Gmail": {
+      "Username": "<<USER_GMAIL>>",
+      "Password":  "<<USER_PASSWORD>>"
+    }
   }
 }
