feat: use adapter to save file in supabase

--- a/PlanGuruAPI/appsettings.Development.json
+++ b/PlanGuruAPI/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Supabase": {
+    "Url": "<<SUPABASE_URL>>",
+    "ApiKey": "<<SUPABASE_API_KEY>>",
+    "Bucket": "<<SUPABASE_BUCKET>>"
   }
 }
