--- a/PlanGuruAPI/appsettings.json
+++ b/PlanGuruAPI/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Supabase": {
+    "Url": "<<SUPABASE_URL>>", 
+    "ApiKey": "<<SUPABASE_API_KEY>>",
+    "Bucket": "<<SUPABASE_BUCKET>>"
+  },
   "AllowedHosts": "*"
 }
